--- a/Platform/Windows/Windows.vcxproj.filters
+++ b/Platform/Windows/Windows.vcxproj.filters
@@ -19,4 +19,16 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="vsoutput.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="copyVS.hlsl" />
+    <FxCompile Include="copyPS.hlsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cbuffer.hlsli" />
+  </ItemGroup>
 </Project>
